background image modified

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Eslem Ouederni</title>
 </head>
-<body class="bg-black-pattern bg-center bg-no-repeat bg-cover text-white font-playfaire scrollable">
+<body class=" bg-center bg-no-repeat bg-cover text-white font-playfaire scrollable">
     <div class="overflow-hidden">
         <div>
             <div class="flex flex-row justify-between md:justify-evenly md:items-center mt-8" >
