--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="styles.css">
     <title>Eslem Ouederni</title>
 </head>
-<body class="backgroundimg bg-center bg-no-repeat bg-cover text-white font-playfaire scrollable">
+<body class="bg-black-pattern bg-center bg-no-repeat bg-cover text-white font-playfaire scrollable">
     <div class="overflow-hidden">
         <div>
             <div class="flex flex-row justify-between md:justify-evenly md:items-center mt-8" >
-                <div class="logo  mr-24 md:ml-24"><h1 class="text-5xl ml-16 text-white font-bold border-white-2">EO</h1></div>
-                <nav class=" flex flex-row md:flex-none md:items-center">
+                <div class="logo mr-4 -ml-6 md:ml-24"><h1 class="text-5xl ml-16 text-white font-bold border-white-2">EO</h1></div>
+                <nav class=" flex flex-row mr-4 md:flex-none md:items-center">
                     <div class=" hidden md:flex flex-row items-center " id="navlinks">
-                        <div class="link links"><a href="#works">MY WORK</a></div>
-                        <div class="link links"><a href="#skills">MY SKILLS</a></div>
+                        <div class="link links"><a href="#works">WORK</a></div>
+                        <div class="link links"><a href="#skills">SKILLS</a></div>
                         <div class="link links"><a href="#contact">CONTACT</a></div>
                     </div>
-                    <div class="navlogo cursor-pointer justify-self-end text-left md:hidden" id="menu">
+                    <div class="navlogo cursor-pointer justify-self-end text-left mr-4 md:hidden" id="menu">
                         <span class="iconify " data-inline="false" data-icon="fluent:navigation-20-regular" style="color: #ffffff; font-size: 50px;"></span>
                     </div>
                 </nav>
@@ -43,23 +43,23 @@
         </div>
 <!-- works -->
         <div class="works" id="works">
-            <div class="relative ml-11 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
+            <div class="relative ml-8 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
                 <h2 class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">Works</h2>
-                <div class="absolute top-5 left-5">
+                <div class="absolute top-5 left-4">
                     <h2 class="lg:text-5xl text-4xl font-bold uppercase ">My Works ...</h2>
                 </div>
             </div>
             <!-- projects -->
             <div class="proj"  data-aos="fade-in" data-aos-duration="1500">
                 <div class="title-paragraph">
-                    <h3 class="title ml-24 m:ml-36 mt-24 tracking-wider">Vokart</h3>
-                    <p class="paragraph text-xl md:text-2xl ml-24 m:ml-36 mt-8 tracking-wide"> A website for ceramics, that was designed by a friend of mine.
+                    <h3 class="title">Vokart</h3>
+                    <p class="paragraph "> A website for ceramics, that was designed by a friend of mine.
                         Still not responsive.
                     <br> Built with : <br> HTML5, CSS, Bootstrap
                    
                 </p>
-                <div class="flex flex-row items-center justify-center">
-                   <div class="flex flex-row items-center mr-8">
+                <div class="flex flex-row items-center justify-center w-auto">
+                   <div class="flex flex-row items-center mr-2 md:mr-8">
                     <a href="https://github.com/EslemOuederni/Vokart" target="_blank"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github" style="font-size: 75px;"></span></a>
                     <p class="text-2xl">Github</p>
                    </div>
@@ -70,11 +70,11 @@
                 </div>
                 </div>
                 <!-- vokart -->
-                <div class="project-image ml-24 md:m-0">
-                    <div class="img-gray w-1/2" data-aos="fade-left"  data-aos-duration="500">
-                        <img class="object-fit max-h-full max-w-full content-center" src="./img/Vokart - Dark.svg" style="width:100%; height:auto;"  alt="">
-                        <div class="bottom-2 -right-12 absolute">
-                            <h1 class="font-bold text-9xl text-secondary-200">01</h1>
+                <div class="project-image m-auto md:ml-32 ">
+                    <div class="img-gray w-1/2 " data-aos="fade-left"  data-aos-duration="500">
+                        <div><img class="object-fit max-h-full max-w-full content-center" src="./img/Vokart - Dark.svg" style="width:100%; height:auto;"  alt=""></div>
+                        <div class="bottom-2  md:-right-12 absolute">
+                            <h1 class="font-bold text-6xl md:text-9xl text-secondary-200">01</h1>
                         </div>
                     </div>
                 </div>
@@ -82,12 +82,12 @@
 
             <div class="proj " data-aos="fade-in" data-aos-duration="1500" >
                 <div class="title-paragraph">
-                    <h3 class="title ml-24 m:ml-36 mt-24 tracking-wider">Personal Portfolio</h3>
-                    <p class="paragraph text-xl md:text-2xl ml-24 m:ml-36 tracking-wide"> A personal Portfolio to share my works with others.
+                    <h3 class="title ">Personal Portfolio</h3>
+                    <p class="paragraph "> A personal Portfolio to share my works with others.
                     <br> Built with : <br> HTML5, Tailwind CSS, JS 
                         </p>
-                        <div class="flex flex-row items-center justify-center">
-                            <div class="flex flex-row items-center mr-8">
+                        <div class="flex flex-row items-center justify-center w-auto">
+                            <div class="flex flex-row items-center mr-2 md:mr-8">
                              <a href="https://github.com/EslemOuederni/Vokart" target="_blank"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github" style="font-size: 75px;"></span></a>
                              <p class="text-2xl">Github</p>
                             </div>
@@ -97,11 +97,11 @@
                              </div>
                          </div>
                 </div>
-                <div class="project-image ml-24 md:m-0">
+                <div class="project-image m-auto md:ml-32">
                     <div class="img-gray flex"  data-aos="fade-left"  data-aos-duration="500">
                         <img class="object-fit max-h-full max-w-full content-center"src="./img/Desktop - Dark.svg" style="width:100%; height:auto;"  alt="">
-                         <div class="bottom-2 -right-16 absolute">
-                            <h1 class="font-bold text-9xl text-secondary-200">02</h1>
+                         <div class="bottom-2 md:-right-16 absolute">
+                            <h1 class="font-bold text-7xl md:text-9xl text-secondary-200">02</h1>
                         </div> 
                     </div>
                 </div>
@@ -109,23 +109,23 @@
             <!-- app -->
             <div class="proj mb-32" data-aos="fade-in" data-aos-duration="1500" >
                 <div class="title-paragraph">
-                    <h3 class="title ml-24 m:ml-36 mt-24 tracking-wider">My Space</h3>
+                    <h3 class="title ">My Space</h3>
                     <p class="paragraph text-xl md:text-2xl ml-24 m:ml-36 mt-8 tracking-wide"> An educational android mobile game.Built with a friend for a university android class project. It has the list of all planets in the solar system with informations about each one of them. Also a quiz to test the knowledge of the kids about what they have learnt so far. 
                         <br> Built with : <br> Android Studio, Java, SQLite
                         </p>
                         <br>
-                        <div class="flex flex-row items-center justify-center">
-                            <div class="flex flex-row items-center mr-8">
+                        <div class="flex flex-row items-center justify-center w-auto">
+                            <div class="flex flex-row items-center mr-2 md:mr-8">
                              <a href="https://github.com/oueslatimohamed/PMM/" target="_blank"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github" style="font-size: 75px;"></span></a>
                              <p class="text-2xl">Github</p>
                             </div>
                          </div>
                 </div>
-                <div class="project-image ml-24 md:m-0">
+                <div class="project-image m-auto md:ml-32">
                     <div class="img-gray"  data-aos="fade-left"  data-aos-duration="500">
                         <img class="object-fit max-h-full max-w-full content-center"src="./img/iPhone X - Silver.svg" style="width:100%; height:auto;"  alt="">
-                         <div class="bottom-2 -right-16 absolute">
-                            <h1 class="font-bold text-9xl text-secondary-200">03</h1>
+                         <div class="bottom-2 md:-right-16 absolute">
+                            <h1 class="font-bold text-6xl md:text-9xl text-secondary-200">03</h1>
                         </div>
                     </div>
                 </div>
@@ -134,44 +134,44 @@
         </div>
         <!-- skills -->
         <div class="skills mt-32" id="skills">
-            <div class="relative ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
+            <div class="relative ml-8 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
                 <h2 class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">Skills</h2>
-                <div class="absolute top-5 left-5">
+                <div class="absolute top-5 left-4">
                     <h2 class="lg:text-5xl text-4xl font-bold uppercase ">My Skills ...</h2>
                 </div>
             </div>
-            <div class="icons grid justify-items-center ">
-               <div class="ui icon " data-aos="fade-in" data-aos-duration="1500">
-                <div><span class="iconify" data-inline="false" data-icon="foundation:html5" style="color: #ffffff; font-size: 95px;"></span></div>
-                <div><span class="iconify" data-inline="false" data-icon="fa-brands:css3-alt" style="color: #ffffff; font-size: 75px;"></span></div>
-                <div><span class="iconify" data-inline="false" data-icon="cib:js" style="color: #ffffff; font-size: 73px;"></span></div>
-                <div><span class="iconify" data-inline="false" data-icon="fa-brands:bootstrap" style="color: #ffffff; font-size: 73px;"></span> </div>
-                <div><span class="iconify" data-inline="false" data-icon="mdi:tailwind" style="color: #ffffff; font-size: 62px;"></span> </div>
+            <div class="icons w-auto ml-8 grid justify-items-center">
+               <div class="ui icon  " data-aos="fade-in" data-aos-duration="1500">
+                <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="foundation:html5" style="color: #ffffff; font-size: 95px;"></span></div>
+                <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="fa-brands:css3-alt" style="color: #ffffff; font-size: 75px;"></span></div>
+                <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="cib:js" style="color: #ffffff; font-size: 73px;"></span></div>
+                <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="fa-brands:bootstrap" style="color: #ffffff; font-size: 73px;"></span> </div>
+                <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="mdi:tailwind" style="color: #ffffff; font-size: 62px;"></span> </div>
                </div>
                 <div class="backend icon " data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify" data-inline="false" data-icon="bx:bxl-react" style="color: #ffffff; font-size: 73px;"></span>  </div>
-                    <div><span class="iconify" data-inline="false" data-icon="bx:bxl-python" style="color: #ffffff; font-size: 73px;"></span></div>
-                    <div><span class="iconify" data-inline="false" data-icon="cib:java" style="color: #ffffff; font-size: 75px;"></span></div>
-                    <div><span class="iconify" data-inline="false" data-icon="ant-design:android-filled" style="color: #ffffff; font-size: 73px;"></span>  </div>
+                    <div><span class="iconify w-1/2 md:w-full " data-inline="false" data-icon="bx:bxl-react" style="color: #ffffff; font-size: 73px;"></span>  </div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="bx:bxl-python" style="color: #ffffff; font-size: 73px;"></span></div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="cib:java" style="color: #ffffff; font-size: 75px;"></span></div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:android-filled" style="color: #ffffff; font-size: 73px;"></span>  </div>
                 </div>
                 <div class="vcontrol icon" data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify" data-inline="false" data-icon="simple-icons:mysql" style="color: #ffffff; font-size: 81px;"></span>                    </div>
-                    <div><span class="iconify" data-inline="false" data-icon="mdi:git" style="color: #ffffff; font-size: 75px;"></span>                    </div>
-                    <div><span class="iconify" data-inline="false" data-icon="ant-design:github-filled" style="color: #ffffff; font-size: 73px;"></span>                    </div>
-                    <div><span class="iconify" data-inline="false" data-icon="ant-design:code-filled" style="color: #ffffff; font-size: 73px;"></span>                    </div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="simple-icons:mysql" style="color: #ffffff; font-size: 81px;"></span>                    </div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="mdi:git" style="color: #ffffff; font-size: 75px;"></span>                    </div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:github-filled" style="color: #ffffff; font-size: 73px;"></span>                    </div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:code-filled" style="color: #ffffff; font-size: 73px;"></span>                    </div>
                 </div>
                 <div class="design icon" data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify" data-inline="false" data-icon="bx:bxl-figma" style="color: #ffffff; font-size: 73px;"></span>                    </div>
-                    <div><span class="iconify" data-inline="false" data-icon="file-icons:adobe-photoshop" style="color: #ffffff; font-size: 73px;"></span>                    </div>
+                    <div><span class="iconify w-1/4 md:w-full" data-inline="false" data-icon="bx:bxl-figma" style="color: #ffffff; font-size: 73px;"></span>                    </div>
+                    <div><span class="iconify w-1/4 md:w-full" data-inline="false" data-icon="file-icons:adobe-photoshop" style="color: #ffffff; font-size: 73px;"></span>                    </div>
                 </div>
             </div>
         </div>
         <!-- contact me -->
         <div class="contact" id="contact">
-            <div class="relative ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
-                <h2 class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">contact</h2>
-                <div class="absolute top-5 left-5">
-                    <h2 class="lg:text-5xl text-4xl font-bold uppercase ">contact me</h2>
+            <div class="relative ml-8 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
+                <h2 class="lg:text-6xl text-4xl opacity-20 font-bold text-secondary-200 uppercase">contact</h2>
+                <div class="absolute top-5 left-3">
+                    <h2 class="lg:text-5xl text-3xl font-bold uppercase ">contact me</h2>
                 </div>
             </div>
 
