--- a/public/index.html
+++ b/public/index.html
@@ -88,11 +88,11 @@
                         </p>
                         <div class="flex flex-row items-center justify-center w-auto">
                             <div class="flex flex-row items-center mr-2 md:mr-8">
-                             <a href="https://github.com/EslemOuederni/Vokart" target="_blank"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github" style="font-size: 75px;"></span></a>
+                             <a href="https://github.com/EslemOuederni/eslemouederniportfolio" target="_blank"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github" style="font-size: 75px;"></span></a>
                              <p class="text-2xl">Github</p>
                             </div>
                              <div class="flex flex-row items-center">
-                                 <a href="https://eslemouederni.github.io/Vokart/"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="fluent:live-20-regular" style="font-size: 50px;"></span></a>
+                                 <a href="https://eslemouederni.github.io/eslemouederniportfolio/public/"><span class="iconify hover:text-secondary-200" data-inline="false" data-icon="fluent:live-20-regular" style="font-size: 50px;"></span></a>
                                  <p class="text-2xl ml-2">Live</p>
                              </div>
                          </div>
