--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,34 @@
     <div class="overflow-hidden">
         <div>
             <div class="flex flex-row justify-between md:justify-evenly md:items-center mt-8">
+                <div class="navlogo cursor-pointer justify-self-end text-left mr-4 md:hidden" id="menu">
+                    <span class="iconify " data-inline="false" data-icon="fluent:navigation-20-regular"
+                        style="color: #ffffff; font-size: 50px;"></span>
+                </div>
                 <nav class=" flex flex-row md:flex-none md:items-center">
                     <div class=" hidden md:flex flex-row items-center " id="navlinks">
                         <div class="link links"><a href="#works">WORK</a></div>
                         <div class="link links"><a href="#skills">SKILLS</a></div>
                         <div class="link links"><a href="#contact">CONTACT</a></div>
                     </div>
-                    <div class="navlogo cursor-pointer justify-self-end text-left mr-4 md:hidden" id="menu">
-                        <span class="iconify " data-inline="false" data-icon="fluent:navigation-20-regular"
-                            style="color: #ffffff; font-size: 50px;"></span>
-                    </div>
+                   
                 </nav>
 
             </div>
         </div>
-        <div class="mt-24 ml-20 mr-20 flex flex-row flex-wrap justify-center items-center ">
+        <div class=" flex flex-wrap justify-center items-center md:justify-around md:items-center md:flex-row md:mt-24 md:ml-20 md:mr-20">
             <div class="w-min mr-20 mt-11 ">
                 <p class="leading-normal font-bold lg:text-6xl md:text-5xl text-3xl">Eslem Ouederni: web developer<span
                         class="text-secondary-100">/ </span> app developer <span class="text-secondary-100">/ </span>
                     designer<span class="text-secondary-100">/</span>learner...</p>
                 <p class="text-gray-300 tracking-widest leading-10 text-sm">Do you want to see my work? </p>
             </div>
-                <div class="relative ">
-                    <div ><p class="text-8xl font-bold text-secondary-200 hidden md:block z-50 mb-10 ml-10">EO</p></div>
-                    <div class="absolute bottom-0 left-0 w-10 z-0 self-center">
-                        <svg id="visual" viewBox="0 0 900 600" class="w-60 h-250"  xmlns="http://www.w3.org/2000/svg"
+            <div class="relative flex items-center justify-center ">
+                <div >
+                    <p class="text-5xl font-bold text-secondary-200 mt-5 mb-12 md:block md:text-8xl ">EO</p>
+                </div>
+                    <div class="absolute bottom-0 self-center">
+                        <svg id="visual" viewBox="0 0 900 600" class="w-28 md:w-60 h-250"  xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
                        <path
                            id="curve1"
@@ -62,7 +65,7 @@
                 </div> 
         </div>
         <!-- scroll down -->
-        <div class="grid justify-items-center mt-32" data-aos="zoom-in" data-aos-duration="4000">
+        <div class="grid justify-items-center mt-10 md:mt-32" data-aos="zoom-in" data-aos-duration="4000">
             <div>
                 <p>Scroll Down</p>
             </div>
@@ -214,14 +217,14 @@
         </section>
 
         <!-- skills -->
-        <div class="skills mt-32 backgroundimgCurved bg-center bg-no-repeat bg-cover " id="skills">
+        <section class="skills mt-32 backgroundimgCurved bg-center bg-cover max-h-600 md:h-auto " id="skills">
             <div class="relative ml-8 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
                 <h2 class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">Skills</h2>
                 <div class="absolute top-5 left-4">
                     <h2 class="lg:text-5xl text-4xl font-bold uppercase ">My Skills ...</h2>
                 </div>
             </div>
-            <div class="icons w-auto ml-8 grid justify-items-center">
+            <div class="icons ml-8 mt-11 grid justify-items-center md:mt-2">
                 <div class="ui icon  " data-aos="fade-in" data-aos-duration="1500">
                     <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="foundation:html5"
                             style="color: #ffffff; font-size: 95px;"></span></div>
@@ -254,22 +257,21 @@
                     <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:code-filled"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
                 </div>
-                <div class="design icon" data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify w-1/4 md:w-full" data-inline="false" data-icon="bx:bxl-figma"
+                <div class="design icon mb-12" data-aos="fade-in" data-aos-duration="1500">
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="bx:bxl-figma"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
-                    <div><span class="iconify w-1/4 md:w-full" data-inline="false"
-                            data-icon="file-icons:adobe-photoshop" style="color: #ffffff; font-size: 73px;"></span>
-                    </div>
+                    <div><span class="iconify w-1/2 md:w-full" data-inline="false"
+                            data-icon="file-icons:adobe-photoshop" style="color: #ffffff; font-size: 73px;"></span></div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- contact me -->
-        <section class="backgroundTopCurved bg-cover bg-center bg-no-repeat mt-0">
+        <section class="backgroundTopCurved bg-cover bg-center bg-no-repeat ">
             <div class="contact" id="contact">
-                <div class="relative ml-8 m:ml-24" data-aos="fade-in" data-aos-duration="1500">
+                <div class="relative m:ml-24" data-aos="fade-in" data-aos-duration="1500">
                     <h2 class="lg:text-6xl text-4xl opacity-20 font-bold text-secondary-200 uppercase">contact</h2>
                     <div class="absolute top-5 left-3">
-                        <h2 class="lg:text-5xl text-3xl font-bold uppercase ">contact me</h2>
+                        <h2 class="lg:text-5xl text-4xl font-bold uppercase">contact me</h2>
                     </div>
                 </div>
 
