--- a/public/index.html
+++ b/public/index.html
@@ -10,62 +10,38 @@
     <title>Eslem Ouederni</title>
 </head>
 
-<body class="backgroundimg bg-center bg-no-repeat bg-cover text-white font-playfaire scrollable">
-    <div class="overflow-hidden">
-        <div>
-            <div class="flex flex-row justify-between md:justify-evenly md:items-center mt-8">
-                <div class="navlogo cursor-pointer justify-self-end text-left mr-4 md:hidden" id="menu">
-                    <span class="iconify " data-inline="false" data-icon="fluent:navigation-20-regular"
-                        style="color: #ffffff; font-size: 50px;"></span>
-                </div>
-                <nav class=" flex flex-row md:flex-none md:items-center">
-                    <div class=" hidden md:flex flex-row items-center " id="navlinks">
+<body class="backgroundimg bg-center bg-no-repeat bg-cover content-center text-white scrollable">
+    <div class="backgroundTopCurved">
+            <div class="flex justify-end md:justify-end my-8 mr-8">
+                <nav class="">
+                    <div class="flex flex-row" id="navlinks">
                         <div class="link links"><a href="#works">WORK</a></div>
                         <div class="link links"><a href="#skills">SKILLS</a></div>
                         <div class="link links"><a href="#contact">CONTACT</a></div>
                     </div>
                    
                 </nav>
-
             </div>
-        </div>
-        <div class=" flex flex-wrap justify-center items-center md:justify-around md:items-center md:flex-row md:mt-24 md:ml-20 md:mr-20">
-            <div class="w-min mr-20 mt-11 ">
-                <p class="leading-normal font-bold lg:text-6xl md:text-5xl text-3xl">Eslem Ouederni: web developer<span
-                        class="text-secondary-100">/ </span> app developer <span class="text-secondary-100">/ </span>
-                    designer<span class="text-secondary-100">/</span>learner...</p>
-                <p class="text-gray-300 tracking-widest leading-10 text-sm">Do you want to see my work? </p>
-            </div>
-            <div class="relative flex items-center justify-center ">
-                <div >
-                    <p class="text-5xl font-bold text-secondary-200 mt-5 mb-12 md:block md:text-8xl ">EO</p>
+        <div class="mx-auto h-screen md:mt-48 max-w-5xl ">
+            <div class="mt-20 ">
+                <p class="text-5xl leading-normal font-bold lg:text-7xl md:text-4xl">ESLEM OUEDERNI</p>
+                <p class="text-2xl mt-4 md:text-3xl lg:text-4xl">A student <span class="text-secondary-200">,</span>Web Developer<span class="text-secondary-200">,</span> App Developer</p>
+                <div class="flex flex-row mt-6 mb-11 ">
+                    <div class="github"> <a href="https://github.com/EslemOuederni" target="_blank"><span
+                                class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github"
+                                style="font-size: 50px;"></span></a></div>
+                    <div class="linkedin"><a href="https://www.linkedin.com/in/eslem-ouederni-858a13182/"><span
+                                class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-linkedin"
+                                style=" font-size: 50px;"></span> </a></div>
                 </div>
-                    <div class="absolute bottom-0 self-center">
-                        <svg id="visual" viewBox="0 0 900 600" class="w-28 md:w-60 h-250"  xmlns="http://www.w3.org/2000/svg"
-                       xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-                       <path
-                           id="curve1"
-                           d="M0 464L30 466.3C60 468.7 120 473.3 180 473.3C240 473.3 300 468.7 360 466.7C420 464.7 480 465.3 540 474.7C600 484 660 502 720 507.3C780 512.7 840 505.3 870 501.7L900 498L900 601L870 601C840 601 780 601 720 601C660 601 600 601 540 601C480 601 420 601 360 601C300 601 240 601 180 601C120 601 60 601 30 601L0 601Z"
-                           fill="#ff2000" stroke-linecap="round" stroke-linejoin="miter"></path>
-                       <path
-                           id="curve2"
-                           d="M0 464L30 469.5C60 475 120 486 180 479.5C240 473 300 449 360 441.8C420 434.7 480 444.3 540 461.8C600 479.3 660 504.7 720 501.3C780 498 840 466 870 450L900 434L900 601L870 601C840 601 780 601 720 601C660 601 600 601 540 601C480 601 420 601 360 601C300 601 240 601 180 601C120 601 60 601 30 601L0 601Z"
-                           fill="#ffffff" stroke-linecap="round" stroke-linejoin="miter" style="visibility: hidden;"></path>
-                   </svg>
-                   <script>
-                       const wavy = KUTE.fromTo(
-                           '#curve1',
-                           {path : '#curve1'},
-                           {path : '#curve2'},
-                           {repeat : 1000, duration : 1000, yoyo : true}
-                       );
-                       wavy.start();
-                   </script>
-                   </div>   
-                </div> 
-        </div>
-        <!-- scroll down -->
-        <div class="grid justify-items-center mt-10 md:mt-32" data-aos="zoom-in" data-aos-duration="4000">
+                <div class="mt-8 mb-8">
+                    <p class="text-3xl lg:text-3xl ">Hello, I'm Eslem ! welcome to my portfolio. I'm passionate about frontend development and design, I try to create websites or mobile apps using new technology .
+                        I'm a computer science student at <a class="link-undeline" href="https://esprit.tn/">ESPRIT</a>, currently working on a project about an educational space on where we've built a website, a mobile app and we'll make a desktop one. It's also worth mentioning, that I've taught a web development class with <a class="link-undeline" href="https://codefirstgirls.com/"> Code First Girls</a>.
+                    </p>
+                </div>
+            </div>
+             <!-- scroll down -->
+        <div class="grid justify-items-center mt-20 md:mt-32" data-aos="zoom-in" data-aos-duration="4000">
             <div>
                 <p>Scroll Down</p>
             </div>
@@ -74,16 +50,52 @@
 
             <!-- <div> <p> <br> . <br> . <br> . </p></div> -->
         </div>
+        </div>
+       
         <!-- works -->
-        <section>
-            <div class="works " id="works">
-                <div class="relative ml-8 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
-                    <h2 class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">Works</h2>
+        <section class="">
+            <div class="works" id="works">
+                <div class="relative" data-aos="fade-in" data-aos-duration="1500">
+                    <h2 class="ml-2 lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">Works</h2>
                     <div class="absolute top-5 left-4">
                         <h2 class="lg:text-5xl text-4xl font-bold uppercase ">My Works ...</h2>
                     </div>
                 </div>
                 <!-- projects -->
+                <!-- Personal portfolio -->
+                <div class="proj " data-aos="fade-in" data-aos-duration="1500">
+                    <div class="title-paragraph">
+                        <h3 class="title ">EdSpace</h3>
+                        <p class="paragraph "> An Educational Space for students. Developed with other classmates for a university project.
+                            <br>There's a dashboard and the frontoffice.
+                            <br> Built with : <br> Symfony, JS , CSS
+                        </p>
+                        <div class="flex flex-row items-center justify-center w-auto">
+                            <div class="flex flex-row items-center mr-2 md:mr-8">
+                                <a href="https://github.com/esprit-idev/edspace_symfony" target="_blank"><span
+                                        class="iconify hover:text-secondary-200" data-inline="false"
+                                        data-icon="ei:sc-github" style="font-size: 75px;"></span></a>
+                                <p class="text-2xl">Github</p>
+                            </div>
+                            <div class="flex flex-row items-center">
+                                <a href="https://eslemouederni.github.io/eslemouederniportfolio/public/"><span
+                                        class="iconify hover:text-secondary-200" data-inline="false"
+                                        data-icon="fluent:live-20-regular" style="font-size: 50px;"></span></a>
+                                <p class="text-2xl ml-2">Live</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-image m-auto md:ml-42">
+                        <div class="img-gray flex" data-aos="fade-left" data-aos-duration="500">
+                            <img class="object-fit max-h-full max-w-full content-center" src="./img/Desktop - Dark.svg"
+                                style="width:100%; height:auto;" alt="">
+                            <div class="bottom-2 md:-right-16 absolute">
+                                <h1 class="font-bold text-7xl md:text-9xl text-secondary-200">02</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- vokart -->
                 <div class="proj" data-aos="fade-in" data-aos-duration="1500">
                     <div class="title-paragraph">
                         <h3 class="title">Vokart</h3>
@@ -217,56 +229,52 @@
         </section>
 
         <!-- skills -->
-        <section class="skills mt-32 backgroundimgCurved bg-center bg-cover max-h-600 md:h-auto " id="skills">
+        <section class="skills mt-32 md:h-full md:w-auto " id="skills">
             <div class="relative ml-8 m:ml-24 mt-32" data-aos="fade-in" data-aos-duration="1500">
                 <h2 class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase">Skills</h2>
                 <div class="absolute top-5 left-4">
                     <h2 class="lg:text-5xl text-4xl font-bold uppercase ">My Skills ...</h2>
                 </div>
             </div>
-            <div class="icons ml-8 mt-11 grid justify-items-center md:mt-2">
+            <div class="icons ml-8 mt-11 grid justify-items-center ">
                 <div class="ui icon  " data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="foundation:html5"
-                            style="color: #ffffff; font-size: 95px;"></span></div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="fa-brands:css3-alt"
-                            style="color: #ffffff; font-size: 75px;"></span></div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="cib:js"
-                            style="color: #ffffff; font-size: 73px;"></span></div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="fa-brands:bootstrap"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="fa-brands:bootstrap"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="mdi:tailwind"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="mdi:tailwind"
                             style="color: #ffffff; font-size: 62px;"></span> </div>
+                            <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="cib:js"
+                                style="color: #ffffff; font-size: 73px;"></span></div>
                 </div>
                 <div class="backend icon " data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify w-1/2 md:w-full " data-inline="false" data-icon="bx:bxl-react"
-                            style="color: #ffffff; font-size: 73px;"></span> </div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="bx:bxl-python"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="bx:bxl-python"
                             style="color: #ffffff; font-size: 73px;"></span></div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="cib:java"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="cib:java"
                             style="color: #ffffff; font-size: 75px;"></span></div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:android-filled"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:android-filled"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full " data-inline="false" data-icon="bx:bxl-react"
+                                style="color: #ffffff; font-size: 73px;"></span> </div>
                 </div>
                 <div class="vcontrol icon" data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="simple-icons:mysql"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="simple-icons:mysql"
                             style="color: #ffffff; font-size: 81px;"></span> </div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="mdi:git"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="mdi:git"
                             style="color: #ffffff; font-size: 75px;"></span> </div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:github-filled"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:github-filled"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
                     <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="ant-design:code-filled"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
                 </div>
-                <div class="design icon mb-12" data-aos="fade-in" data-aos-duration="1500">
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="bx:bxl-figma"
+                <div class="design icon mb-12 md:mb-20" data-aos="fade-in" data-aos-duration="1500">
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false" data-icon="bx:bxl-figma"
                             style="color: #ffffff; font-size: 73px;"></span> </div>
-                    <div><span class="iconify w-1/2 md:w-full" data-inline="false"
+                    <div class="mr-4"><span class="iconify w-1/2 md:w-full" data-inline="false"
                             data-icon="file-icons:adobe-photoshop" style="color: #ffffff; font-size: 73px;"></span></div>
                 </div>
             </div>
         </section>
         <!-- contact me -->
-        <section class="backgroundTopCurved bg-cover bg-center bg-no-repeat ">
+        <section class="bg-center bg-cover h-auto mb-4">
             <div class="contact" id="contact">
                 <div class="relative m:ml-24" data-aos="fade-in" data-aos-duration="1500">
                     <h2 class="lg:text-6xl text-4xl opacity-20 font-bold text-secondary-200 uppercase">contact</h2>
@@ -275,7 +283,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="mb-18">
                     <form action="https://formspree.io/f/mpzongdo" method="POST" id="my-form">
                         <div class=" grid justify-items-center mt-14">
                             <div class="name" data-aos="fade-in" data-aos-duration="1500">
@@ -306,7 +314,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="flex flex-row justify-center mt-6 mb-11 ">
+                <div class="flex flex-row justify-center mt-6 mb-2">
                     <div class="github"> <a href="https://github.com/EslemOuederni" target="_blank"><span
                                 class="iconify hover:text-secondary-200" data-inline="false" data-icon="ei:sc-github"
                                 style="font-size: 50px;"></span></a></div>
