--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,9 @@
     class="bg-center bg-no-repeat bg-cover content-center text-white scrollable"
   >
     <div class="backgroundTopCurved" id="up">
-      <nav
-        class="flex flex-row justify-between p-4 mt-0 fixed w-full z-10 top-0"
-      >
+      <nav class="flex flex-row justify-between p-4 mt-0 w-full z-10 top-0">
         <div class="link links">
-          <a href="#up" class="text-2xl"
+          <a href="#" class="text-2xl"
             ><span class="text-secondary-200">ESLEM</span> OUEDERNI</a
           >
         </div>
@@ -97,6 +95,7 @@
         </div>
       </div>
       <!-- education -->
+      <hr class="index" />
       <section class="skills mt-32 h-screen md:w-auto" id="skills">
         <div class="relative mt-32" data-aos="fade-in" data-aos-duration="1500">
           <h2
@@ -485,7 +484,7 @@
       </section>
 
       <!-- skills -->
-      <section class="skills mt-32 h-screen md:w-auto" id="skills">
+      <section class="skills p-48 h-screen md:w-auto" id="skills">
         <div class="relative mt-32" data-aos="fade-in" data-aos-duration="1500">
           <h2
             class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase"
@@ -497,16 +496,16 @@
               My Skills ...
             </h2>
           </div>
-          <div class="flex flex-row justify-evenly items-center">
+          <div class="flex flex-row justify-evenly items-center mt-20">
             <div class="flex flex-col">
-              <h3 class="text-3xl text-secondary-200">FRONTEND</h3>
+              <h3 class="text-3xl text-secondary-200 font-medium">FRONTEND</h3>
               <p class="flex leading-10 text-xl">
                 html5<br />
                 javascript <br />react native
               </p>
             </div>
             <div class="flex flex-col">
-              <h3 class="text-3xl text-secondary-200">BACKEND</h3>
+              <h3 class="text-3xl text-secondary-200 font-medium">BACKEND</h3>
               <p class="flex leading-10 text-xl">
                 Node <br />java<br />
                 javafx<br />
@@ -517,7 +516,7 @@
               </p>
             </div>
             <div class="flex flex-col">
-              <h3 class="text-3xl text-secondary-200">TOOLS</h3>
+              <h3 class="text-3xl text-secondary-200 font-medium">TOOLS</h3>
               <p class="flex leading-10 text-xl">
                 Git <br />
                 vscode<br />
@@ -532,9 +531,10 @@
     <!-- <script src="https://unpkg.com/@barba/core"></script> -->
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
       AOS.init();
     </script>
+    <script src="./app.js"></script>
   </body>
 </html>
