--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
           >
         </div>
         <div class="flex flex-row" id="navlinks">
-          <div class="link links"><a href="#works">ABOUT ME</a></div>
-          <div class="link links"><a href="#skills">WORK</a></div>
-          <div class="link links"><a href="#contact">SKILLS</a></div>
+          <div class="link links"><a href="#about">ABOUT ME</a></div>
+          <div class="link links"><a href="#works">WORK</a></div>
+          <div class="link links"><a href="#skills">SKILLS</a></div>
         </div>
       </nav>
-      <div class="mx-auto h-screen md:mt-48 max-w-5xl">
+      <div class="mx-auto lg:h-screen md:mt-48 max-w-5xl">
         <div class="mt-24">
           <p
             class="text-4xl leading-normal ml-4 font-bold lg:text-7xl md:text-6xl"
@@ -45,7 +45,7 @@
             </span>
             teacher
           </p>
-          <div class="flex flex-row mt-6 mb-11">
+          <div class="flex flex-row mt-6 mb-11 ml-2">
             <div class="github">
               <a href="https://github.com/EslemOuederni" target="_blank"
                 ><span
@@ -102,9 +102,9 @@
       </div>
       <!-- education -->
       <hr class="index" />
-      <section class="skills h-screen md:w-auto" id="skills">
+      <section class="skills lg:h-screen md:w-auto" id="about">
         <div
-          class="relative mt-12 md:32"
+          class="relative mt-12 md:mt-32"
           data-aos="fade-in"
           data-aos-duration="1500"
         >
@@ -493,7 +493,7 @@
         </div>
       </section>
       <!-- skills -->
-      <section class="skills h-screen" id="skills">
+      <section class="skills lg:h-screen" id="skills">
         <div class="relative mt-32" data-aos="fade-in" data-aos-duration="1500">
           <h2
             class="lg:text-6xl text-5xl opacity-20 font-bold text-secondary-200 uppercase"
@@ -506,7 +506,7 @@
             </h2>
           </div>
           <div
-            class="flex flex-col items-center mt-12 md:flex-row md:justify-evenly md:items-center"
+            class="flex flex-col items-center text-center mt-12 md:flex-row md:justify-evenly md:items-center"
           >
             <div class="flex flex-col">
               <h3 class="text-3xl text-secondary-200 font-medium">FRONTEND</h3>
